# MCP---AGS-Boreholes-OGC-API

./: .gitignore  README.md  pyproject.toml
server/: main.py
